--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,39 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.main_container {
+  background: #43B0F1;
+  width: 90vw;
+  min-width: 475px;
+  height: 99vh;
+  box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.4);
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin: 5px;
+  padding: 5px;
 }
+.header {
+  background: #057DCD;
+  width: 98%;
+  height: 20vw;
+  min-height: 150px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 
-.App-link {
-  color: #61dafb;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.header img {
+  height: 98%;
+}
+.header_text {
+  display: flex;
+  flex-direction: column;
+}
+.title {
+  color: #E8EEF1;
+  font-size: 8vw;
+  text-shadow: 2px 2px grey;
+  text-decoration: underline;
+}
+.subtitle {
+  color: #E8EEF1;
+  font-size: 2vw;
 }
