--- a/src/App.css
+++ b/src/App.css
@@ -12,12 +12,13 @@
 }
 .header {
   background: #057DCD;
-  width: 98%;
+  width: 96.5%;
   height: 20vw;
   min-height: 150px;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+  padding: 10px;
 }
 .header img {
   height: 93%;
@@ -114,6 +115,7 @@
   width: 20vw;
   color: #E8EEF1;
   text-align: center;
+  font-size: 1vw;
 }
 .toptext:hover {
   background: #057DCD;
