--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,7 @@
 .main_container {
   background: #43B0F1;
   width: 90vw;
-  min-width: 475px;
-  height: 99vh;
+
   box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.4);
   display: flex;
   flex-direction: column;
@@ -12,42 +11,42 @@
 }
 .header {
   background: #057DCD;
-  width: 96.5%;
-  height: 20vw;
+  width: 98%;
+  height: 15vw;
   min-height: 150px;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  padding: 10px;
 }
 .header img {
-  height: 93%;
+  height: 100%;
 }
 .header_text {
+  width: 80%;
+  height: 95%;
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 .title {
   color: #E8EEF1;
-  font-size: 8vw;
+  font-size: 9vw;
   text-shadow: 2px 2px grey;
   text-decoration: underline;
+  text-align: center;
 }
 .subtitle {
   color: #E8EEF1;
-  font-size: 2vw;
+  font-size: 2.5vw;
 }
 .link_bar {
   width: 98%;
-  height: 2vw;
   background: #057DCD;
   display: flex;
   justify-content: space-between;
   margin-bottom: 30px;
 }
 .link {
-  font-size: 2vw;
-  width: 25%;
   text-align: center;
   color: #E8EEF1;
 }
@@ -58,9 +57,8 @@
 }
 .main {
   width: 98%;
-  height: 50vw;
   display: flex;
-  justify-content: space-between;
+  align-items: flex-start;
 }
 .article_container {
   width: 72%;
@@ -90,7 +88,6 @@
 .lede {
   width: 100%;
   background: #057DCD;
-  font-size: 2vw;
   color: #E8EEF1;
   text-align: center;
 }
@@ -122,6 +119,84 @@
   color: #E8EEF1;
   box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.4);
 }
+
+/* /////////////////////////////////////////////// */
+
+@media (min-width: 260px) {
+  .title {
+    font-size: 8vw;
+  }
+  .subtitle {
+    font-size: 3vw;
+  }
+  .link_bar {
+    flex-direction: column;
+    align-items: center;
+  }
+  .link {
+    font-size: 5vw;
+    width: 50%;
+  }
+  .main {
+    flex-direction: column;
+    align-items: center;
+  }
+  .sidebar_container {
+    width: 98%;
+    height: 100%;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 30px;
+  }
+  .lede {
+    font-size: 5vw;
+  }
+  .footer {
+    width: 98%;
+    height: 6vw;
+    margin-top: 30px;
+    background: #057DCD;
+    display: flex;
+    justify-content: space-around;
+  }
+}
+
+@media (min-width: 1024px) {
+  .title {
+    font-size: 6vw;
+  }
+  .subtitle {
+    font-size: 3vw;
+  }
+  .link_bar {
+    flex-direction: row;
+  }
+  .link {
+    font-size: 2vw;
+    width: 25%;
+  }
+  .main {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  .sidebar_container {
+    width: 25%;
+    flex-direction: column;
+    align-items: center;
+  }
+  .lede {
+    font-size: 2vw;
+  }
+  .footer {
+    width: 98%;
+    height: 6vw;
+    margin-top: 30px;
+    background: #057DCD;
+    display: flex;
+    justify-content: space-around;
+  }
+}
+
 /*
   white:  #E8EEF1
   grotto: #43B0F1
