--- a/src/App.css
+++ b/src/App.css
@@ -55,10 +55,10 @@
   color: #057DCD;
   box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.4);
 }
-.main {
+.center {
   width: 98%;
   display: flex;
-  align-items: flex-start;
+  justify-content: space-between;
 }
 .article_container {
   width: 72%;
@@ -81,6 +81,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: flex-start;
 }
 .sidebar_container img {
   width: 50%;
@@ -183,6 +184,7 @@
     width: 25%;
     flex-direction: column;
     align-items: center;
+    justify-content: flex-start;
   }
   .lede {
     font-size: 2vw;
