--- a/src/App.css
+++ b/src/App.css
@@ -12,13 +12,11 @@
 .header {
   background: #057DCD;
   width: 98%;
-  min-height: 150px;
   display: flex;
-  justify-content: space-evenly;
   align-items: center;
 }
 .header img {
-  height: 100%;
+  height: 20vw;
 }
 .header_text {
   width: 80%;
@@ -29,14 +27,14 @@
 }
 .title {
   color: #E8EEF1;
-  font-size: 9vw;
+  font-size: 8vw;
   text-shadow: 2px 2px grey;
   text-decoration: underline;
   text-align: center;
 }
 .subtitle {
   color: #E8EEF1;
-  font-size: 2.5vw;
+  font-size: 4vw;
 }
 .link_bar {
   width: 98%;
@@ -118,7 +116,7 @@
     font-size: 8vw;
   }
   .subtitle {
-    font-size: 3vw;
+    font-size: 4vw;
   }
   .link_bar {
     flex-direction: column;
@@ -127,6 +125,7 @@
   .link {
     font-size: 5vw;
     width: 50%;
+    text-decoration: underline;
   }
   .main {
     flex-direction: column;
@@ -157,18 +156,13 @@
 }
 
 @media (min-width: 1024px) {
-  .title {
-    font-size: 6vw;
-  }
-  .subtitle {
-    font-size: 3vw;
-  }
   .link_bar {
     flex-direction: row;
   }
   .link {
     font-size: 2vw;
     width: 25%;
+    text-decoration: none;
   }
   .main {
     flex-direction: row;
@@ -198,10 +192,3 @@
     margin-bottom: 0;
   }
 }
-
-/*
-  white:  #E8EEF1
-  grotto: #43B0F1
-  royal:  #057DCD
-  navy:   #1E3D58
-*/
