--- a/src/App.css
+++ b/src/App.css
@@ -97,10 +97,6 @@
   text-align: center;
   font-family: 'Roboto Slab', serif;
 }
-iframe {
-  width: 98%;
-  height: 30vw;
-}
 .sidebar_container {
   display: flex;
   flex-direction: column;
@@ -137,9 +133,6 @@ iframe {
   text-align: center;
   font-family: "Arial";
 }
-.meet_hours img {
-  width: 23vw;
-}
 a {
   color: #E8EEF1;
 }
@@ -157,7 +150,7 @@ a {
     font-size: 7vw;
   }
   .subtitle {
-    font-size: 4vw;
+    font-size: 5vw;
   }
   .link_bar {
     width: 90%;
@@ -165,8 +158,8 @@ a {
     align-items: center;
   }
   .link {
-    font-size: 5vw;
-    width: 50%;
+    font-size: 7vw;
+    width: 70%;
     text-decoration: underline;
   }
   .main {
@@ -177,18 +170,22 @@ a {
     width: 90%;
   }
   .article {
-    width: 60%;
+    width: 90%;
   }
   .article_title {
-    font-size: 6vw;
+    font-size: 8vw;
   }
   .article_subtitle {
-    font-size: 4.5vw;
+    font-size: 5.5vw;
     margin-bottom: 10px;
   }
   .article_body {
-    font-size: 4vw;
+    font-size: 5vw;
     margin: 5px;
+  }
+  iframe {
+    width: 98%;
+    height: 60vw;
   }
   .hours_header {
     width: 90%;
@@ -200,7 +197,10 @@ a {
   }
   .lede {
     width: 92%;
-    font-size: 5vw;
+    font-size: 8vw;
+  }
+  .meet_hours img {
+    width: 92.5%;
   }
   .footer {
     width: 90%;
@@ -209,12 +209,12 @@ a {
   }
   .footer .link {
     width: 80vw;
-    font-size: 6vw;
+    font-size: 7vw;
     text-decoration: underline;
   }
   .bottomtext {
     width: 80vw;
-    font-size: 4vw;
+    font-size: 5vw;
     margin-bottom: 10px;
   }
 }
@@ -225,6 +225,9 @@ a {
   }
   .header {
     width: 98%;
+  }
+  .subtitle {
+    font-size: 4vw;
   }
   .link_bar {
     width: 98%;
@@ -252,6 +255,10 @@ a {
   .article_body {
     font-size: 1.5vw;
   }
+  iframe {
+    width: 98%;
+    height: 30vw;
+  }
   .hours_header {
     width: 60%;
     font-size: 2vw;
@@ -264,6 +271,9 @@ a {
     width: 100%;
     font-size: 2vw;
   }
+  .meet_hours img {
+    width: 40%;
+  }
   .footer {
     width: 98%;
     flex-direction: row;
@@ -272,7 +282,7 @@ a {
   }
   .footer .link {
     width: 20vw;
-    font-size: 2.2vw;
+    font-size: 2vw;
     text-decoration: none;
   }
   .bottomtext {
