--- a/src/App.css
+++ b/src/App.css
@@ -119,15 +119,21 @@
   display: flex;
 }
 .footer .link {
-  background: #E8EEF1;
-  color: #057DCD;
+  /* background: #E8EEF1; */
+  background: #057DCD;
+  /* color: #057DCD; */
+  color: #E8EEF1;
+  border: 2px solid #E8EEF1;
   text-align: center;
   padding: 2px;
   margin-bottom: 5px;
+  margin-top: 5px;
 }
 .footer .link:hover {
-  background: #057DCD;
-  color: #E8EEF1;
+  /* background: #057DCD; */
+  background: #E8EEF1;
+  /* color: #E8EEF1; */
+  color: #057DCD;
   box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.4);
 }
 .bottomtext {
@@ -221,7 +227,7 @@ a {
   }
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 768px) {
   .main_container {
     width: 90vw;
   }
@@ -236,7 +242,7 @@ a {
     flex-direction: row;
   }
   .link {
-    font-size: 2.2vw;
+    font-size: 1rem;
     width: 25%;
     text-decoration: none;
   }
@@ -290,5 +296,83 @@ a {
   .bottomtext {
     width: 20vw;
     font-size: 1.5vw;
+  }
+}
+
+@media (min-width: 1440px) {
+  .main_container {
+    width: 1280px;
+  }
+  .header {
+    width: 98%;
+  }
+  .title {
+    font-size: 6em;
+  }
+  .header img {
+    height: 288px;
+  }
+  .subtitle {
+    font-size: 3.5em;
+  }
+  .link_bar {
+    width: 98%;
+    flex-direction: row;
+  }
+  .link {
+    font-size: 1em;
+    width: 25%;
+    text-decoration: none;
+  }
+  .main {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-start;
+  }
+  .article_container {
+    width: 72%;
+  }
+  .article_title {
+    font-size: 2.5em;
+  }
+  .article_subtitle {
+    font-size: 1.5em;
+  }
+  .article_body {
+    font-size: 1em;
+  }
+  iframe {
+    width: 98%;
+    height: 30vw;
+  }
+  .hours_header {
+    width: 60%;
+    font-size: 1.5em;
+  }
+  .sidebar_container {
+    width: 25%;
+    margin-top: 0;
+  }
+  .lede {
+    width: 100%;
+    font-size: 1.5em;
+  }
+  .meet_hours img {
+    width: 40%;
+  }
+  .footer {
+    width: 98%;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: space-around;
+  }
+  .footer .link {
+    width: 301px;
+    font-size: 1.8em;
+    text-decoration: none;
+  }
+  .bottomtext {
+    width: 305px;
+    font-size: 1.5em;
   }
 }
